Programming_Code/6_AST/5/src/main/mp/parser/MP.g4
grammar MP;

@lexer::header {
from lexererr import *
}

options{
	language=Python3;
}

program: mptype EOF;

arraytype:  primtype dimen | arraytype dimen  ;

mptype: primtype | arraytype;

primtype: INTTYPE | FLOATTYPE; 

dimen: '[' num '..' num ']';

num: '-'? INTLIT;

INTLIT: [0-9]+ ;

INTTYPE: 'integer';

FLOATTYPE: 'real';

WS : [ \t\r\n]+ -> skip ; // skip spaces, tabs, newlines

ERROR_CHAR: .;
